RESOLVED FIXED60740
[Qt] GraphicsContext3DQt.cpp fails to compile
https://bugs.webkit.org/show_bug.cgi?id=60740
Summary [Qt] GraphicsContext3DQt.cpp fails to compile
Andrew Wason
Reported 2011-05-12 17:34:00 PDT
GraphicsContext3DQt.cpp is failing to compile, patch coming: ../../../Source/WebCore/platform/graphics/GraphicsContext3D.h: In constructor ' WebCore::GraphicsContext3D::GraphicsContext3D(WebCore::GraphicsContext3D::Attributes, WebCore::HostWindow*, bool)': ../../../Source/WebCore/platform/graphics/GraphicsContext3D.h:935: error: 'WebCore::GraphicsContext3D::m_internal' will be initialized after ../../../Source/WebCore/platform/graphics/GraphicsContext3D.h:889: error: 'bool WebCore::GraphicsContext3D::m_isResourceSafe' ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp:688: error : when initialized heremake[1]: *** [obj/debug/GraphicsContext3DQt.o] Error 1
Attachments
fix compilation (1.41 KB, patch)
2011-05-12 17:37 PDT, Andrew Wason
no flags
Andrew Wason
Comment 1 2011-05-12 17:37:50 PDT
Created attachment 93375 [details] fix compilation
WebKit Commit Bot
Comment 2 2011-05-13 05:09:11 PDT
Comment on attachment 93375 [details] fix compilation Clearing flags on attachment: 93375 Committed r86424: <http://trac.webkit.org/changeset/86424>
WebKit Commit Bot
Comment 3 2011-05-13 05:09:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.