2011-05-13  Andrew Wason  <rectalogic@rectalogic.com>

Reviewed by Darin Adler.

        GraphicsContext3DQt.cpp fails to compile
        https://bugs.webkit.org/show_bug.cgi?id=60740

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::GraphicsContext3D):
         Change order of initializers.

Canonical link: https://commits.webkit.org/76079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86424 268f45cc-cd09-0410-ab3c-d52691b4dbfc